[gd_scene load_steps=9 format=3 uid="uid://dnytylsauc6g4"]

[ext_resource type="Script" path="res://scripts/screens/settings_screen.gd" id="1_l5fvb"]
[ext_resource type="Texture2D" uid="uid://c7bcxp1c5sgdm" path="res://sprites/play_games.svg" id="2_bjx2d"]
[ext_resource type="PackedScene" uid="uid://ct0ys0nkjvmf6" path="res://scenes/components/audio_button.tscn" id="3_bjigb"]
[ext_resource type="Texture2D" uid="uid://uvhq351885bm" path="res://sprites/sound_normal.svg" id="4_6jauh"]
[ext_resource type="Texture2D" uid="uid://deyjpsra5jcjk" path="res://sprites/close_normal.svg" id="5_de8sr"]

[sub_resource type="Gradient" id="Gradient_5p5um"]
offsets = PackedFloat32Array(0, 0.718232, 1)
colors = PackedColorArray(1, 0.760784, 0, 1, 1, 0.491149, 0, 1, 1, 0.247059, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_n1oaq"]
gradient = SubResource("Gradient_5p5um")

[sub_resource type="Theme" id="Theme_epwc6"]
default_font_size = 14

[node name="SettingsScreen" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l5fvb")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -257.0
offset_right = 231.0
offset_bottom = 153.0
grow_horizontal = 2
grow_vertical = 2
rotation = 1.5708
pivot_offset = Vector2(128, 205)
texture = SubResource("GradientTexture1D_n1oaq")

[node name="PlayGamesLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -51.5
offset_top = -120.5
offset_right = 83.5001
offset_bottom = -83.5
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"HeaderMedium"
text = "Play Games"

[node name="PlayGamesIcon" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.0
offset_top = -126.0
offset_right = -56.0
offset_bottom = -78.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_bjx2d")

[node name="PlayGamesButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -61.0
offset_right = 90.0
offset_bottom = -13.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_epwc6")
toggle_mode = true
text = "CONNECT"

[node name="AudioToggles" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -74.0
offset_top = 19.0
offset_right = 17.0
offset_bottom = 72.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
alignment = 1

[node name="MusicButton" parent="AudioToggles" instance=ExtResource("3_bjigb")]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
bus_name = "music"

[node name="SoundButton" parent="AudioToggles" instance=ExtResource("3_bjigb")]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
icon = ExtResource("4_6jauh")
bus_name = "sound"

[node name="CloseButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 173.0
offset_top = -195.0
offset_right = 248.0
offset_bottom = -120.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.75, 0.75)
texture_normal = ExtResource("5_de8sr")

[connection signal="toggled" from="PlayGamesButton" to="." method="_on_connect_toggled"]
[connection signal="pressed" from="CloseButton" to="." method="_on_close_button_pressed"]
